# ftracker

./: .gitignore  Cargo.toml  README.md  text.md
.github/: dependabot.yaml
.github/workflows/: ci.yml
crates/ftracker-cli/: Cargo.toml
crates/ftracker-cli/src/: context.rs  errors.rs  lib.rs  main.rs
crates/ftracker-cli/src/cli/: args.rs  mod.rs
crates/ftracker-cli/src/cli/commands/: add.rs  mod.rs  parse.rs
crates/ftracker-cli/src/commands/: add.rs
crates/ftracker-cli/src/config/: mod.rs  schema.rs
crates/ftracker-cli/src/output/: mod.rs
crates/ftracker-core/: Cargo.toml
crates/ftracker-core/src/: errors.rs  lib.rs
crates/ftracker-core/src/domain/: mod.rs  trade_record.rs
crates/ftracker-core/src/ports/: mod.rs  trade_store.rs
crates/ftracker-core/src/services/: mod.rs  trade_service.rs
crates/ftracker-infra/: Cargo.toml
crates/ftracker-infra/src/: lib.rs
crates/ftracker-infra/src/in_memory/: mod.rs
