[workspace]
resolver = "2"
members = [
    "crates/ftracker-core",
    "crates/ftracker-infra",
    "crates/ftracker-cli",
]

[workspace.dependencies]
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }